k8s/yaml/ingress/ingress-kubesystem.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  rules:
#edit by chenke
#no use ssl so shutdown it
  - host: kubesystem.52xiyoucom
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80

  - host: monitoring-grafana.52xiyoucom
    http:
      paths:
      - path: /
        backend:
          serviceName: monitoring-grafana
          servicePort: 80
